--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 	</div>
 </footer>
 
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="unslider/js/unslider-min.js"></script>
 <script>
 		jQuery(document).ready(function($) {
@@ -279,7 +279,7 @@
 		});
 </script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script>
 	function setEqualHeight(columns) { 
 		var tallestcolumn = 0; 
